# avr-framework

./: Makefile  README.md  configure.ac
include/: i2c.h  io.h  uart.h
include/ckravr/: adc.h  ds3231.h  i2c.h  io.h  uart.h
samples/adc/: Makefile  main.c
samples/blinky/: Makefile  main.c
samples/button/: Makefile  main.c
samples/ds3231/: Makefile  main.c
src/: Makefile.am  adc.c  ds3231.c  i2c.c  uart.c
